REBUILD.log
--------------- Rebuild Started: 05/27/2025 01:50:19 Project: HCM_UPBDrive, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\HCM_UPBDrive.cycdx"
Deleting file ".\HCM_UPBDrive.svd"
Deleting file ".\HCM_UPBDrive.rpt"
Deleting file ".\HCM_UPBDrive_timing.html"
cydsfit.exe -.appdatapath "C:\Users\badea\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\badea\Documents\PSoC Creator\can_bun\HCM_UPBDrive.cydsn\HCM_UPBDrive.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\badea\Documents\PSoC Creator\can_bun\HCM_UPBDrive.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0060: warning: Warning in component: CAN. The BUS_CLK clock accuracy should be 0.5% or better. Please, use an external XTAL or external clock source to meet the CAN accurate clocking requirements.
 * C:\Users\badea\Documents\PSoC Creator\can_bun\HCM_UPBDrive.cydsn\TopDesign\TopDesign.cysch (Instance:CAN)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/can_comm.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c src\can_comm.c -o .\CortexM3\ARM_GCC_541\Debug\can_comm.o
src\can_comm.c: In function 'CAN_Read_From_ECU':
src\can_comm.c:74:119: error: 'MAX_SPEED' undeclared (first use in this function)
         if ((car_state.rpm > MAX_RPM) || (car_state.gear > MAX_GEAR) || (car_state.tps > MAX_TPS) || (car_state.vss > MAX_SPEED))
                                                                                                                       ^
src\can_comm.c:74:119: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/27/2025 01:50:25 ---------------
